hugo/assets/css/main.scss
$enable-gradients: true;

$blue: #446E9B;
$red: #d9534f;
$orange: #f47c3c;
$green: #93C54B;
$cyan: #29ABE0;

$secondary: #dee2e6;
$yiq-contrasted-threshold: 200;

/* Required Bootstrap components */
$grid-gutter-width: 30px;
$link-decoration: none;
$container-max-widths: (
  sm: 540px,
  md: 720px,
  lg: 960px,
  xl: 1140px
);

@import 'vendor/bootstrap-5/scss/functions';
@import 'vendor/bootstrap-5/scss/variables';
@import 'vendor/bootstrap-5/scss/maps';
@import 'vendor/bootstrap-5/scss/mixins';
@import 'vendor/bootstrap-5/scss/helpers';

$attachment_color: darken($green, 10%);
$theme-colors: map-merge($theme-colors,
    ("attachment": $attachment_color,
      "verified": $attachment_color,
    ));

/* Optional Bootstrap components -- we only include those we need */
@import 'vendor/bootstrap-5/scss/root';
@import 'vendor/bootstrap-5/scss/reboot';
@import 'vendor/bootstrap-5/scss/type';
@import 'vendor/bootstrap-5/scss/images';
@import 'vendor/bootstrap-5/scss/containers';
@import 'vendor/bootstrap-5/scss/grid';
@import 'vendor/bootstrap-5/scss/tables';
@import 'vendor/bootstrap-5/scss/forms';
@import 'vendor/bootstrap-5/scss/buttons';
@import 'vendor/bootstrap-5/scss/transitions';
// @import 'vendor/bootstrap-5/scss/dropdown';
// @import 'vendor/bootstrap-5/scss/button-group';
// @import 'vendor/bootstrap-5/scss/input-group';
// @import 'vendor/bootstrap-5/scss/custom-forms'; // Merged into forms
@import 'vendor/bootstrap-5/scss/nav';
@import 'vendor/bootstrap-5/scss/navbar';
@import 'vendor/bootstrap-5/scss/card';
// @import 'vendor/bootstrap-5/scss/breadcrumb';
@import 'vendor/bootstrap-5/scss/pagination';
@import 'vendor/bootstrap-5/scss/badge';
@import 'vendor/bootstrap-5/scss/alert';
@import 'vendor/bootstrap-5/scss/list-group';
@import 'vendor/bootstrap-5/scss/close';
@import 'vendor/bootstrap-5/scss/modal';
@import 'vendor/bootstrap-5/scss/tooltip';
@import 'vendor/bootstrap-5/scss/utilities';
@import 'vendor/bootstrap-5/scss/utilities/api';
// @import 'vendor/bootstrap-5/scss/print'; // Merged

@import 'homepage';
@import 'info';
@import 'papers';
@import 'texmath';

/* Some space improvements on smaller displays */
@include media-breakpoint-down(sm) {
  h2#title {
    font-size: $h3-font-size !important;
  }
}

/* Fix spacing issues in nested lists */
ul ul,
ul ol,
ol ul,
ol ol {
  &+p {
    margin-top: 1rem !important;
  }
}

/* On medium and small screens, we don't have enough horizontal space
   to display both search box and navigation links; therefore, we
   transform links to lowercase so they fit.
*/
.transform-lower-sm {
  text-transform: lowercase;
}

@include media-breakpoint-up(sm) {
  .transform-lower-sm {
    text-transform: unset !important;
  }
}

/* Adjust the style of the "abs" buttons */
.abstract-collapse {
  @extend .mt-2;
}

/* For co-author/venue info on people/ pages */
.list-group-compact {
  .list-group-item {
    padding-top: .5rem;
    padding-bottom: .5rem;
  }
}

/* Simple toggle buttons for list entries */
.list-group-toggle-btn {
  cursor: pointer;
  @extend .text-primary;

  &[aria-expanded=false] {
    @extend .btn-info;
  }

  &[aria-expanded=true] {
    display: none;
  }
}

/* Custom text color utilities for verified/attachment badges */
.text-verified,
.text-attachment {
  color: $attachment_color !important;
}

